<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/act_migrar_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/asistente_de_migraci_n_de_bd"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/act_migrar_text2"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/este_asistente_le_ayudar_a_migrar_su_bd_al_nuevo_algoritmo_de_encriptaci_n_aes_gcm_solo_utilizar_si_tiene_una_bd_creada_con_la_versi_n_1_2_8_o_inferior_de_archivador"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_migrar_text1" />

    <EditText
        android:id="@+id/act_migrar_edit_path"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/ruta_del_fichero_bd_anterior"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_migrar_text2"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/act_migrar_btn_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/act_migrar_edit_path"
        app:layout_constraintTop_toBottomOf="@+id/act_migrar_text2" />

    <EditText
        android:id="@+id/act_migrar_edit_pass"
        android:layout_width="387dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/coloque_su_clave_anterior"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_migrar_edit_path"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/act_migrar_btn_migrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:text="@string/migrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_migrar_edit_pass" />

    <Button
        android:id="@+id/act_migrar_btn_atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toEndOf="@+id/act_migrar_btn_migrar"
        app:layout_constraintTop_toBottomOf="@+id/act_migrar_edit_pass" />



</androidx.constraintlayout.widget.ConstraintLayout>